# emblems

./: .gitignore  Emblems.hs  List.hs  Main.hs  Makefile  default.nix  emblems.cabal  emblems.nix
test/: list-emblems.sh  set-emblems.sh  unset-emblems.sh
