name:                emblems
version:             0.1.0.0
synopsis:            A command-line utility for manipulating emblems on file icons
license:             GPL-3
license-file:        LICENSE
author:              Neil Mayhew
maintainer:          neil_mayhew@users.sourceforge.net
copyright:           2015 Neil Mayhew
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable emblems
  main-is:             Main.hs
  other-extensions:    DeriveDataTypeable
  build-depends:       base >=4.8 && <4.9, bytestring >=0.10 && <0.11,
                       utf8-string >=0.3, cmdargs, gio, gtk
  default-language:    Haskell2010
